# remote-desktop-controller

./: .dockerignore  .editorconfig  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPILE_VERIFICATION.md  CONTRIBUTING.md  Cargo.toml  DOCUMENTATION_INDEX.md  FLUTTER_START_GUIDE.md  ICE_TEST_QUICK_REF.md  ICE_TEST_READY.md  LICENSE  Makefile  PHASE4.1_STATUS.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  SESSION_SUMMARY_2026-06-28.md  SETUP.md  TEST_COMMANDS.sh  TODO.md  build_ice_tools.sh  check_build.sh  git_commit.sh  package.json  run_real_screen_capture_test.sh  test_hardware_encoder.sh  test_ice_p2p.sh
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request.md
.github/workflows/: build-macos.yml  ci.yml
.skills/: README.md
client/flutter/: BUILD.md  Makefile  README.md  prebuild.sh  pubspec.yaml
crates/rdcs-codec/: Cargo.toml  Cargo.toml.bak  PHASE2_COMPLETION_REPORT.md  PHASE2_DELIVERABLES.md  PHASE2_SUMMARY.md  PROJECT_FINAL_REPORT.md  README.md  RTP_INTEGRATION.md
crates/rdcs-codec/examples/: display_roundtrip.rs  local_roundtrip.rs  local_roundtrip_mock.rs  test_openh264_api.rs
crates/rdcs-codec/src/: adaptive.rs  analyzer.rs  decoder.rs  encoder.rs  error.rs  lib.rs  peer_connection.rs.deprecated  pipeline.rs  types.rs  webrtc_decoder.rs.deprecated  webrtc_encoder.rs.deprecated
crates/rdcs-codec/src/platform/: media_foundation.rs  mod.rs  openh264_decoder.rs  openh264_encoder.rs  vaapi.rs  videotoolbox.rs
crates/rdcs-codec/src/rtp/: depacketizer.rs  mod.rs  packetizer.rs  srtp.rs
crates/rdcs-codec/src/session/: key_exchange.rs  mod.rs  network.rs  peer_connection.rs  qos.rs  receiver.rs  sender.rs  stats.rs  video_session.rs
crates/rdcs-codec/tests/: rtp_integration.rs  session_integration.rs
crates/rdcs-connection/: Cargo.toml
crates/rdcs-connection/examples/: hardware_encoder_test.rs  ice_client.rs  ice_p2p_test.rs  ice_server.rs  real_screen_capture_test.rs  video_datachannel_test.rs  video_e2e_test.rs
crates/rdcs-connection/src/: frame_reassembler.rs  heartbeat.rs  ice.rs  lib.rs  mdns.rs  media_session.rs  path.rs  real_ice_agent.rs  reconnect.rs  video_channel.rs
crates/rdcs-connection/tests/: media_session_e2e.rs
crates/rdcs-core/: Cargo.toml
crates/rdcs-crypto/: Cargo.toml
crates/rdcs-crypto/src/: aead.rs  error.rs  key_exchange.rs  lib.rs  session.rs
crates/rdcs-desktop/: Cargo.toml
crates/rdcs-desktop/src/: agent.rs  controller.rs  main.rs
crates/rdcs-display/: Cargo.toml  README.md
crates/rdcs-display/examples/: display_test.rs
crates/rdcs-display/src/: error.rs  lib.rs  renderer.rs  window.rs
crates/rdcs-ffi/: Cargo.toml
crates/rdcs-ffi/examples/: input_injection_test.rs  local_loopback_test.rs  video_frame_test.rs
crates/rdcs-ffi/src/: input_handler.rs  lib.rs  lib_tests.rs  video_handler.rs
crates/rdcs-macos/: Cargo.toml  build.rs
crates/rdcs-macos/src/: capture.rs  clipboard.rs  input.rs  lib.rs  permissions.rs  scaling.rs
crates/rdcs-nat-test/: Cargo.toml
crates/rdcs-nat-test/src/: lib.rs  nat_detector.rs
crates/rdcs-platform/: Cargo.toml
crates/rdcs-relay/: Cargo.toml
crates/rdcs-relay/src/: auth.rs  forwarder.rs  health.rs  lib.rs  main.rs  metrics.rs  protocol.rs  session.rs
crates/rdcs-relay/tests/: load_test.rs
crates/rdcs-session/: Cargo.toml
crates/rdcs-session/src/: lib.rs  manager.rs.deprecated
crates/rdcs-signaling/: Cargo.toml  TEST.md  TEST_REPORT.md
crates/rdcs-signaling/src/: config.rs  error.rs  ice_config.rs  lib.rs  main.rs  mdns.rs  mdns_bridge.rs  scaling.rs
crates/rdcs-signaling/src/handlers/: connect.rs  disconnect.rs  heartbeat.rs  invite.rs  mod.rs  offline.rs  register.rs  relay.rs
crates/rdcs-signaling/src/redis/: keys.rs  mod.rs  ttl.rs
crates/rdcs-signaling/src/ws/: handler.rs  message.rs  mod.rs  session.rs
crates/rdcs-signaling/tests/: integration_test.rs
crates/rdcs-transfer/: Cargo.toml
crates/rdcs-transfer/src/: checksum.rs  clipboard_sync.rs  file_receiver.rs  file_sender.rs  lib.rs
crates/rdcs-transport/: Cargo.toml
crates/rdcs-transport/examples/: tcp_video_e2e.rs
crates/rdcs-transport/src/: channel.rs  congestion.rs  fec.rs  lib.rs  nack.rs  packet.rs  sequencer.rs  tcp_video.rs
deploy/: deploy-stun-turn.sh  docker-compose.stun.yml  stun-turn-setup.md  turnserver.conf
deploy/docker/: .env.dev  .env.example  .env.prod.example  Caddyfile  Dockerfile.api  Dockerfile.web  (+13 more)
docs/: API_ROUTES_SPEC.md  BUILD_MULTI_ARCH.md  CODEC_STATUS_ANALYSIS.md  COMPILATION_FIX_REPORT.md  CURRENT_PHASE.md  DEVELOPMENT.md  E2E_TEST_PLAN.md  EXECUTION_CHECKLIST.md  INVITE_CODE_CRASH_FIX.md  MVP.md  NEXT_STEPS.md  PHASE0_CLEANUP_SUMMARY.md  PHASE0_COMPLETION_REPORT.md  PHASE1A_COMPLETION_REPORT.md  PHASE1_COMPLETION_REPORT.md  README.md  ROADMAP.md  STANDARD_STRUCTURE.md  architecture-review-report.md  联调测试报告.md
scripts/: README.md  SCRIPTS_README.md  TEST_COMMANDS.sh  auto-fix-openh264.sh  build-display.sh  check-compilation.sh  diagnose-openh264.sh  diagnose-tcp-build.sh  fix-client-tests.sh  fix-flutter-ffi.sh  health-check.sh  ice-test-client.sh  ice-test-server.sh  package_macos.sh  project-status.sh  reset-dev.sh  run-client-tests.sh  run-local-roundtrip-mock.sh  run-local-roundtrip-openh264.sh  run-local-roundtrip.sh  run-tcp-video-e2e.sh  run-unit-tests.sh  run-with-logs.sh  test-flutter-client.sh  test-go-api.sh  test-hardware-accel-gate.sh  test-openh264-build.sh  test-phase2-tcp.sh  test-phase3-nat.sh  test-signaling-server.sh  test-tcp-video.sh  test_ice_cross_network.sh  test_real_ice_agent.sh  verify-fixes.sh
src/: lib.rs
tests/: codec_integration_test.rs  e2e_connection_test.rs  e2e_failure_injection_test.rs  e2e_performance_test.rs  integration_codec_transport.rs  integration_connection.rs  integration_connection_path.rs  integration_crypto.rs  integration_ffi.rs  integration_pipeline.rs  integration_transfer.rs  integration_transport.rs  integration_transport_reliability.rs  nat_traversal_test.rs  transfer_integration_test.rs
(+360 files in other folders)
