[package]
name = "rdcs-connection"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Connection management: mDNS discovery, ICE traversal, path selection, and reconnection"

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
webrtc = "0.9"
tracing = { workspace = true }
bytes = "1.5"

[dev-dependencies]
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
