[package]
name = "rdcs-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "RDCS unified desktop client — run as controller or agent"

[[bin]]
name = "rdcs-desktop"
path = "src/main.rs"

[dependencies]
rdcs-platform   = { path = "../rdcs-platform" }
rdcs-codec      = { path = "../rdcs-codec", features = ["software-encoder"] }
rdcs-display    = { path = "../rdcs-display" }
rdcs-connection = { path = "../rdcs-connection" }
rdcs-transport  = { path = "../rdcs-transport" }
rdcs-session    = { path = "../rdcs-session" }
rdcs-macos      = { path = "../rdcs-macos" }

tokio           = { workspace = true }
tracing         = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow          = { workspace = true }
clap            = { version = "4", features = ["derive"] }
serde           = { workspace = true }
