[package]
name = "rdcs-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "C ABI bridge for Flutter/Dart integration with the RDCS Rust engine"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rdcs-core = { path = "../rdcs-core" }
rdcs-platform = { path = "../rdcs-platform" }
rdcs-crypto = { path = "../rdcs-crypto" }
rdcs-transport = { path = "../rdcs-transport" }
rdcs-codec = { path = "../rdcs-codec" }
rdcs-connection = { path = "../rdcs-connection" }
rdcs-transfer = { path = "../rdcs-transfer" }

[target.'cfg(target_os = "macos")'.dependencies]
rdcs-macos = { path = "../rdcs-macos" }
