[package]
name = "rdcs-macos"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "macOS platform implementations for RDCS (screen capture, input, audio, clipboard)"

[dependencies]
rdcs-platform = { path = "../rdcs-platform" }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
core-foundation = "0.10"
objc = "0.2"
