[package]
name = "rdcs-nat-test"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "rdcs_nat_test"
path = "src/lib.rs"

[dependencies]
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror = "2.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tracing-subscriber.workspace = true
