[package]
name = "rdcs-relay"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "rdcs-relay"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
