[package]
name = "rdcs-transfer"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "File transfer and clipboard synchronization for RDCS"

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
sha2 = "0.10"
rdcs-platform = { path = "../rdcs-platform" }

[dev-dependencies]
tempfile = "3"
